feat: add customer name on template + export pdf from database data

--- a/backend/src/pdf/templates/flat-yellow/index.hbs
+++ b/backend/src/pdf/templates/flat-yellow/index.hbs
@@ -90,6 +90,7 @@
     <section class="single-page">
       <div class="page-container">
         <h1 style="text-align: center; width: 60%; margin: auto;">{{ sections.cover.title }}</h1>
+        <p class="text-dark" style="text-align: center;">{{ customerName }}</p>
         <div class="cover-img" style="background-image: url({{ sections.cover.cover_image.src }}); margin: 50px 0;"></div>
         <p class="text-dark" style="text-align: center;">{{ start_date }} - {{ end_date }}</p>
       </div>
