--- a/backend/src/pdf/templates/flat-yellow/index.hbs
+++ b/backend/src/pdf/templates/flat-yellow/index.hbs
@@ -47,8 +47,8 @@
     .summary-circle {
       background-color: {{theme.primary}};
       color: {{theme.text_light}};
-      width: 70px;
-      height: 70px;
+      min-width: 70px;
+      min-height: 70px;
       border-radius: 50%;
       display: flex;
       justify-content: center;
@@ -137,7 +137,9 @@
         <div style="margin-top: 80px;">
         {{#each sections.useful-informations.items.informations}}
           <div style="display: flex; justify-content: space-between; align-items: flex-start; margin-top: 5%; page-break-after: {{ pageBreak }};">
-            <img src="{{ image.src }}" style="width: 35%; height: auto; border-radius: 10px 1px 10px 10px;">
+            {{#if image}}
+              <img src="{{ image.src }}" style="width: 35%; height: auto; border-radius: 10px 1px 10px 10px;">
+            {{/if}}
             <div style="width: 60%;">
               <div style="height: 8px; background-color: {{../theme.primary}}; border-radius: 0 10px 10px 0"></div>
               <h2 style="margin-bottom: 10px; color: {{../theme.secondary}};">{{ title }}</h2>
