feat: add multiple section of same type

--- a/backend/src/templates/items/flat-yellow/contact.hbs
+++ b/backend/src/templates/items/flat-yellow/contact.hbs
@@ -2,7 +2,7 @@
       <div class="page-header">
         {{ data.coverTitle }}
       </div>
-      <div class="page-container">
+      <div class="page-container" style="page-break-after: always;">
         <h1 style="text-align: center; margin-top: 30%; margin-bottom: 80px;">{{data.title}}</h1>
         <div style="display: flex; justify-content: center; align-items: center;">
           <img style="height: 150px; width: 150px; border-radius: 50%;" src="{{data.items.image.src}}">
