--- a/backend/src/templates/items/flat-yellow/transports.hbs
+++ b/backend/src/templates/items/flat-yellow/transports.hbs
@@ -26,7 +26,7 @@
               <span>{{arrival_location}} - {{arrival_date}} - {{arrival_hour}}</span>
             </div>
             <p>{{{ injectHTML description }}}</p>
-            <a href="{{link}}" target="_blank" rel="noopener noreferrer">{{link}}</a>
+            <a href="{{link}}" target="_blank" rel="noopener noreferrer" style="text-decoration: underline;">Voir plus d'informations.</a>
           </div>
         {{/each}}
       </div>
