feat: change icon library and colors

--- a/frontend/src/css/quasar.variables.scss
+++ b/frontend/src/css/quasar.variables.scss
@@ -14,12 +14,12 @@
 
 // src/css/quasar.variables.scss
 
-$primary: #240046;
-$secondary: #5a189a;
+$primary: #5D3891;
+$secondary: #070520;
 $secondary-1: #59189a1f;
 $accent: #fa709a;
 
-$dark: #37332f;
+$dark: #413D53;
 $dark-page: #04021e;
 
 $positive: #2ecc71;
