--- a/frontend/src/css/app.scss
+++ b/frontend/src/css/app.scss
@@ -7,11 +7,12 @@
     box-sizing: border-box;
 }
 
-h1, h2, h3, h4 {
+h1, h2, h3, h4, h5, h6 {
     font-weight: bold;
+    color: $secondary;
 }
 
-h1, h2, h3, h4, h5, h6, p {
+p {
     color: $dark;
 }
 
