feat: module picker and create from section item (only on useful informations)

--- a/frontend/src/css/quasar.variables.scss
+++ b/frontend/src/css/quasar.variables.scss
@@ -14,7 +14,7 @@
 
 // src/css/quasar.variables.scss
 
-$primary: #5D3891;
+$primary: #240046;
 $secondary: #070520;
 $secondary-1: #59189a1f;
 $accent: #fa709a;
