feat: add sync database modules feature

--- a/backend/src/templates/items/flat-yellow/itinerary.hbs
+++ b/backend/src/templates/items/flat-yellow/itinerary.hbs
@@ -13,7 +13,7 @@
         {{ data.coverTitle }}
       </div>
       <div class="page-container">
-        {{#each data.items.steps}}
+        {{#each data.steps}}
           <div style="margin-top: 80px; page-break-after: always;">
             <div style="width: 100%; height: 350px; background-image: url({{ image.src }}); background-size: cover; background-repeat: no-repeat; border-radius: 6px 6px 6px 6px;"></div>
             <div>
